--- a/test-output/old/Authentication/methods-alphabetical.html
+++ b/test-output/old/Authentication/methods-alphabetical.html
@@ -1,22 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Authentication</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8fbfcf">  <td>19/08/28 15:02:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFormTest.allRequiredElementsAreDisplayed()[pri:1, instance:LoginFormTest@2bfb583b]">allRequiredElementsAreDisplayed</td> 
-  <td>main@1164692340</td>   <td></td> </tr>
-<tr bgcolor="b8b18c">  <td>19/08/28 15:02:32</td>   <td>13178</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.close_All()[pri:0, instance:LoginFormTest@2bfb583b]">&lt;&lt;close_All</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1164692340</td>   <td></td> </tr>
-<tr bgcolor="b8b18c">  <td>19/08/28 15:02:02</td>   <td>-16692</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:LoginFormTest@2bfb583b]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1164692340</td>   <td></td> </tr>
-<tr bgcolor="8fbfcf">  <td>19/08/28 15:02:21</td>   <td>2283</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFormTest.loginWithValidCredentials(java.lang.String, java.lang.String)[pri:2, instance:LoginFormTest@2bfb583b]">loginWithValidCredentials</td> 
-  <td>main@1164692340</td>   <td></td> </tr>
-<tr bgcolor="8fbfcf">  <td>19/08/28 15:02:29</td>   <td>10226</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFormTest.loginWith_Blank_EmailAddress()[pri:6, instance:LoginFormTest@2bfb583b]">loginWith_Blank_EmailAddress</td> 
-  <td>main@1164692340</td>   <td></td> </tr>
-<tr bgcolor="8fbfcf">  <td>19/08/28 15:02:31</td>   <td>11673</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFormTest.loginWith_Blank_Password()[pri:7, instance:LoginFormTest@2bfb583b]">loginWith_Blank_Password</td> 
-  <td>main@1164692340</td>   <td></td> </tr>
-<tr bgcolor="8fbfcf">  <td>19/08/28 15:02:26</td>   <td>7623</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFormTest.loginWith_Incorrect_PassWord(java.lang.String, java.lang.String)[pri:4, instance:LoginFormTest@2bfb583b]">loginWith_Incorrect_PassWord</td> 
-  <td>main@1164692340</td>   <td></td> </tr>
-<tr bgcolor="8fbfcf">  <td>19/08/28 15:02:25</td>   <td>6190</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFormTest.loginWith_Incorrect_Username(java.lang.String, java.lang.String)[pri:3, instance:LoginFormTest@2bfb583b]">loginWith_Incorrect_Username</td> 
-  <td>main@1164692340</td>   <td></td> </tr>
-<tr bgcolor="8fbfcf">  <td>19/08/28 15:02:28</td>   <td>8937</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFormTest.loginWith_Invalid_Email_Address()[pri:5, instance:LoginFormTest@2bfb583b]">loginWith_Invalid_Email_Address</td> 
-  <td>main@1164692340</td>   <td></td> </tr>
+<tr bgcolor="96a8a1">  <td>19/09/03 11:57:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFormTest.allRequiredElementsAreDisplayed()[pri:1, instance:LoginFormTest@7ea37dbf]">allRequiredElementsAreDisplayed</td> 
+  <td>main@963110412</td>   <td></td> </tr>
+<tr bgcolor="7274d2">  <td>19/09/03 11:57:36</td>   <td>12743</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.close_All()[pri:0, instance:LoginFormTest@7ea37dbf]">&lt;&lt;close_All</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@963110412</td>   <td></td> </tr>
+<tr bgcolor="7274d2">  <td>19/09/03 11:57:08</td>   <td>-15490</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:LoginFormTest@7ea37dbf]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@963110412</td>   <td></td> </tr>
+<tr bgcolor="96a8a1">  <td>19/09/03 11:57:26</td>   <td>2067</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFormTest.loginWithValidCredentials(java.lang.String, java.lang.String)[pri:2, instance:LoginFormTest@7ea37dbf]">loginWithValidCredentials</td> 
+  <td>main@963110412</td>   <td></td> </tr>
+<tr bgcolor="96a8a1">  <td>19/09/03 11:57:33</td>   <td>9719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFormTest.loginWith_Blank_EmailAddress()[pri:6, instance:LoginFormTest@7ea37dbf]">loginWith_Blank_EmailAddress</td> 
+  <td>main@963110412</td>   <td></td> </tr>
+<tr bgcolor="96a8a1">  <td>19/09/03 11:57:35</td>   <td>11210</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFormTest.loginWith_Blank_Password()[pri:7, instance:LoginFormTest@7ea37dbf]">loginWith_Blank_Password</td> 
+  <td>main@963110412</td>   <td></td> </tr>
+<tr bgcolor="96a8a1">  <td>19/09/03 11:57:30</td>   <td>7004</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFormTest.loginWith_Incorrect_PassWord(java.lang.String, java.lang.String)[pri:4, instance:LoginFormTest@7ea37dbf]">loginWith_Incorrect_PassWord</td> 
+  <td>main@963110412</td>   <td></td> </tr>
+<tr bgcolor="96a8a1">  <td>19/09/03 11:57:29</td>   <td>5641</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFormTest.loginWith_Incorrect_Username(java.lang.String, java.lang.String)[pri:3, instance:LoginFormTest@7ea37dbf]">loginWith_Incorrect_Username</td> 
+  <td>main@963110412</td>   <td></td> </tr>
+<tr bgcolor="96a8a1">  <td>19/09/03 11:57:32</td>   <td>8298</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFormTest.loginWith_Invalid_Email_Address()[pri:5, instance:LoginFormTest@7ea37dbf]">loginWith_Invalid_Email_Address</td> 
+  <td>main@963110412</td>   <td></td> </tr>
 </table>
