--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,42 +4,22 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>AddClothesToCartTest</td>
+<td>LoginFormTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>deleteItemsFromCart</td>
+<td>check_If_all_Required_Elements_Are_Displayed</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>Add_Summer_Dress_To_Cart</td>
+<td>login_With_Correct_Credentials</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>checkingCartProductsQtyAndPrice</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>check_out_btn</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>signInRequest</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>continueToShoppingSummary</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>Add_Casual_Dress_To_Cart</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>Add_Evening_Dress_To_Cart</td>
+<td>login_With_Invalid_Email_Address_Valid_Password</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
