--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,24 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c6e487">  <td>19/09/05 15:39:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddClothesToCartTest.Add_Casual_Dress_To_Cart()[pri:2, instance:AddClothesToCartTest@add0edd]">Add_Casual_Dress_To_Cart</td> 
-  <td>main@1019384604</td>   <td></td> </tr>
-<tr bgcolor="c6e487">  <td>19/09/05 15:39:27</td>   <td>3774</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddClothesToCartTest.Add_Evening_Dress_To_Cart()[pri:3, instance:AddClothesToCartTest@add0edd]">Add_Evening_Dress_To_Cart</td> 
-  <td>main@1019384604</td>   <td></td> </tr>
-<tr bgcolor="c6e487">  <td>19/09/05 15:39:19</td>   <td>-4908</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddClothesToCartTest.Add_Summer_Dress_To_Cart()[pri:1, instance:AddClothesToCartTest@add0edd]">Add_Summer_Dress_To_Cart</td> 
-  <td>main@1019384604</td>   <td></td> </tr>
-<tr bgcolor="c6e487">  <td>19/09/05 15:39:40</td>   <td>16110</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddClothesToCartTest.check_out_btn()[pri:7, instance:AddClothesToCartTest@add0edd]">check_out_btn</td> 
-  <td>main@1019384604</td>   <td></td> </tr>
-<tr bgcolor="c6e487">  <td>19/09/05 15:39:35</td>   <td>11590</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddClothesToCartTest.checkingCartProductsQtyAndPrice()[pri:5, instance:AddClothesToCartTest@add0edd]">checkingCartProductsQtyAndPrice</td> 
-  <td>main@1019384604</td>   <td></td> </tr>
-<tr bgcolor="d3b267">  <td>19/09/05 15:39:42</td>   <td>18600</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.close_All()[pri:0, instance:AddClothesToCartTest@add0edd]">&lt;&lt;close_All</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1019384604</td>   <td></td> </tr>
-<tr bgcolor="c6e487">  <td>19/09/05 15:39:37</td>   <td>13889</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddClothesToCartTest.continueToShoppingSummary()[pri:6, instance:AddClothesToCartTest@add0edd]">continueToShoppingSummary</td> 
-  <td>main@1019384604</td>   <td></td> </tr>
-<tr bgcolor="c6e487">  <td>19/09/05 15:39:31</td>   <td>7734</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddClothesToCartTest.deleteItemsFromCart()[pri:4, instance:AddClothesToCartTest@add0edd]">deleteItemsFromCart</td> 
-  <td>main@1019384604</td>   <td></td> </tr>
-<tr bgcolor="d3b267">  <td>19/09/05 15:39:02</td>   <td>-21411</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:AddClothesToCartTest@add0edd]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1019384604</td>   <td></td> </tr>
-<tr bgcolor="c6e487">  <td>19/09/05 15:39:42</td>   <td>18563</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddClothesToCartTest.signInRequest()[pri:8, instance:AddClothesToCartTest@add0edd]">signInRequest</td> 
-  <td>main@1019384604</td>   <td></td> </tr>
+<tr bgcolor="96a8a1">  <td>19/09/08 13:15:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFormTest.check_If_all_Required_Elements_Are_Displayed()[pri:1, instance:LoginFormTest@1198b989]">check_If_all_Required_Elements_Are_Displayed</td> 
+  <td>main@1624820151</td>   <td></td> </tr>
+<tr bgcolor="7274d2">  <td>19/09/08 13:16:38</td>   <td>39416</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.close_All()[pri:0, instance:LoginFormTest@1198b989]">&lt;&lt;close_All</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1624820151</td>   <td></td> </tr>
+<tr bgcolor="7274d2">  <td>19/09/08 13:13:07</td>   <td>-172104</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:LoginFormTest@1198b989]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1624820151</td>   <td></td> </tr>
+<tr bgcolor="96a8a1">  <td>19/09/08 13:16:05</td>   <td>6328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFormTest.login_With_Correct_Credentials(java.lang.String, java.lang.String)[pri:0, instance:LoginFormTest@1198b989]">login_With_Correct_Credentials</td> 
+  <td>main@1624820151</td>   <td></td> </tr>
+<tr bgcolor="96a8a1">  <td>19/09/08 13:16:36</td>   <td>36701</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFormTest.login_With_Invalid_Email_Address_Valid_Password(java.lang.String, java.lang.String)[pri:0, instance:LoginFormTest@1198b989]">login_With_Invalid_Email_Address_Valid_Password</td> 
+  <td>main@1624820151</td>   <td></td> </tr>
 </table>
